Add `plot_indicator_usage()`  - resolves 1 TODO from readme

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(lrrname_to_lrr)
 export(mlra_to_lrr)
 export(mlra_to_mlraname)
 export(mlraname_to_mlra)
+export(plot_indicator_usage)
+importFrom(grDevices,hcl.colors)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
