--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ URL: https://github.com/brownag/hydricsoils/, https://humus.rocks/hydricsoils/
 BugReports: https://github.com/brownag/hydricsoils/issues/
 Imports: 
     tools,
-    utils
+    utils,
+    grDevices
 Suggests: 
     terra,
     knitr,
