--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,22 @@
 
 export(cache_lrrmlra_geometry)
 export(clear_lrrmlra_geometry)
+export(fihs_match)
+export(indicator_to_name)
+export(indicator_to_usesym)
 export(lrr_to_lrrname)
 export(lrr_to_mlra)
 export(lrrmlra_geometry)
+export(lrrmlra_match)
 export(lrrname_to_lrr)
 export(mlra_to_lrr)
 export(mlra_to_mlraname)
 export(mlraname_to_mlra)
+export(name_to_indicator)
 export(plot_indicator_usage)
+export(usesym_match)
+export(usesym_to_indicator)
 importFrom(grDevices,hcl.colors)
+importFrom(stats,setNames)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
