Add `hydricsoils_data_dir()` and `lrrmlra_geometry_dsn()`  - update MLRA source URL

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,13 @@
 export(cache_lrrmlra_geometry)
 export(clear_lrrmlra_geometry)
 export(fihs_match)
+export(hydricsoils_data_dir)
 export(indicator_to_name)
 export(indicator_to_usesym)
 export(lrr_to_lrrname)
 export(lrr_to_mlra)
 export(lrrmlra_geometry)
+export(lrrmlra_geometry_dsn)
 export(lrrmlra_match)
 export(lrrname_to_lrr)
 export(mlra_to_lrr)
